--- a/groups/Europeana/Europeana.yaml
+++ b/groups/Europeana/Europeana.yaml
@@ -286,6 +286,79 @@ TAGS:
     - formtastic.placeholders.contribution.metadata_record.new.field_ticket
     - formtastic.placeholders.settings.admin/contributions_controller/export_settings.export.exclude
     - formtastic.placeholders.settings.run_co_co/configuration.edit.allowed_upload_extensions
+    - formtastic.placeholders.settings.run_co_co/configuration.edit.bing_client_id
+    - formtastic.placeholders.settings.run_co_co/configuration.edit.bing_client_secret
+    - formtastic.placeholders.settings.run_co_co/configuration.edit.bing_translate_key
+    - formtastic.placeholders.settings.run_co_co/configuration.edit.gmap_api_key
+    - formtastic.placeholders.settings.run_co_co/configuration.edit.google_analytics_key
+    - formtastic.placeholders.settings.run_co_co/configuration.edit.google_api_email
+    - formtastic.placeholders.settings.run_co_co/configuration.edit.max_upload_size
+    - formtastic.placeholders.settings.run_co_co/configuration.edit.sharethis_id
+    - formtastic.placeholders.settings.run_co_co/configuration.edit.site_name
+    - formtastic.placeholders.settings.run_co_co/configuration.edit.site_url
+    - formtastic.placeholders.taxonomy_term.taxonomy_term.create.term
+    - formtastic.placeholders.taxonomy_term.taxonomy_term.edit.term
+    - formtastic.placeholders.taxonomy_term.taxonomy_term.new.term
+    - formtastic.placeholders.user.contact.create.full_name
+    - formtastic.placeholders.user.contact.create.locality
+    - formtastic.placeholders.user.contact.create.postal_code
+    - formtastic.placeholders.user.contact.create.region
+    - formtastic.placeholders.user.contact.edit.full_name
+    - formtastic.placeholders.user.contact.edit.locality
+    - formtastic.placeholders.user.contact.edit.postal_code
+    - formtastic.placeholders.user.contact.edit.region
+    - formtastic.placeholders.user.contact.edit.tel
+    - formtastic.placeholders.user.contact.new.full_name
+    - formtastic.placeholders.user.contact.new.locality
+    - formtastic.placeholders.user.contact.new.postal_code
+    - formtastic.placeholders.user.contact.new.region
+    - formtastic.placeholders.user.user.create.email
+    - formtastic.placeholders.user.user.create.password
+    - formtastic.placeholders.user.user.create.password_confirmation
+    - formtastic.placeholders.user.user.create.username
+    - formtastic.placeholders.user.user.edit.email
+    - formtastic.placeholders.user.user.edit.password
+    - formtastic.placeholders.user.user.edit.password_confirmation
+    - formtastic.placeholders.user.user.edit.username
+    - formtastic.placeholders.user.user.new.email
+    - formtastic.placeholders.user.user.new.password
+    - formtastic.placeholders.user.user.new.password_confirmation
+    - formtastic.placeholders.user.user.new.username
+    - formtastic.titles.admin/contributions_controller/export_settings.export.settings
+    - formtastic.titles.annotation.edit.annotation
+    - formtastic.titles.collection_day.edit.admin_collection_day
+    - formtastic.titles.collection_day.edit.admin_collection_day_address
+    - formtastic.titles.collection_day.update.admin_collection_day
+    - formtastic.titles.collection_day.update.admin_collection_day_address
+    - formtastic.titles.contact.edit.user_picture
+    - formtastic.titles.run_co_co/configuration.edit.settings
+    - formtastic.titles.taxonomy_term.new.taxonomy_term
+    - formtastic.titles.user.create.accept_terms
+    - formtastic.titles.user.create.user_session
+    - formtastic.titles.user.edit.accept_terms
+    - formtastic.titles.user.new.accept_terms
+    - formtastic.titles.user.new.user_session
+    - helpers.label.annotation.annotation.edit.text
+    - helpers.label.attachment.attachment.edit.title
+    - helpers.label.attachment.attachment.new.title
+    - helpers.label.attachment.attachment.update.title
+    - helpers.label.collection_day.collection_day.edit.description
+    - helpers.label.collection_day.collection_day.edit.end_date
+    - helpers.label.collection_day.collection_day.edit.image
+    - helpers.label.collection_day.collection_day.edit.name
+    - helpers.label.collection_day.collection_day.edit.start_date
+    - helpers.label.collection_day.collection_day.edit.taxonomy_term_id
+    - helpers.label.collection_day.collection_day.edit.url
+    - helpers.label.collection_day.collection_day.update.description
+    - helpers.label.collection_day.collection_day.update.end_date
+    - helpers.label.collection_day.collection_day.update.image
+    - helpers.label.collection_day.collection_day.update.name
+    - helpers.label.collection_day.collection_day.update.start_date
+    - helpers.label.collection_day.collection_day.update.taxonomy_term_id
+    - helpers.label.collection_day.collection_day.update.url
+    - helpers.label.collection_day.contact.edit.locality
+    - helpers.label.collection_day.contact.edit.postal_code
+    - helpers.label.collection_day.contact.edit.region
 
 CHECKER:
   class: EuropeanaMessageChecker
