[Core] Message key to ignore
https://gerrit.wikimedia.org/r/#/c/178551/

Change-Id: Idd4b06ff9a1f9820ee10c2f90bf9effefd1d8dee

--- a/groups/MediaWiki/MediaWiki.yaml
+++ b/groups/MediaWiki/MediaWiki.yaml
@@ -393,6 +393,7 @@ TAGS:
     - ipb-default-expiry
     - javascripttest-backlink
     - javascripttest-qunit-name
+    - javascripttest-title
     - licenses
     - linksearch-summary
     - listgrouprights-link
