Add es-mx (es-MX) locale for iNaturalist
* Autonym from http://www.unicode.org/cldr/charts/26/by_type/locale_display_names.languages__e-j_.html#2c8977fe9e4dc68a
* See https://translatewiki.net/wiki/Thread:Support/Getting_iNaturalist.org_registered_on_translatewiki
* We're leaving "en-US" and "es-ES" alone for now, we translate those at
  "en" and "es" so we will only pull/push the "en" and "es" repo files.

Change-Id: I46bc6a1b5d7aa35256146e80a3a63d5ad082df0a

--- a/groups/iNaturalist/iNaturalist.yaml
+++ b/groups/iNaturalist/iNaturalist.yaml
@@ -9,4 +9,6 @@ BASIC:
 FILES:
   class: RubyYamlFFS
   sourcePattern: "%GROUPROOT%/inaturalist/config/locales/%CODE%.yml"
+  codeMap:
+    es-mx: es-MX
   codeAsRoot: true
