--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,7 @@
 {
 	"require": {
-		"wikimedia/cdb": "~1.0",
-		"cssjanus/cssjanus": "~1.1",
-		"leafo/lessphp": "~0.5",
-		"psr/log": "1.0.0",
 		"ruflin/elastica": "1.3.0.0",
-		"mediawiki/semantic-maps": "~3.1"
-	},
-	"autoload": {
-		"psr-0": {
-			"ComposerHookHandler": "includes/composer"
-		}
-	},
-	"scripts": {
-		"pre-update-cmd": "ComposerHookHandler::onPreUpdate",
-		"pre-install-cmd": "ComposerHookHandler::onPreInstall"
-	},
-	"config": {
-		"optimize-autoloader": true,
-		"prepend-autoloader": false
+		"mediawiki/semantic-maps": "~3.1",
+		"romaricdrigon/metayaml": "~1.0"
 	}
 }
