Make group configs pass schema
Bug: T86336
Change-Id: I84d65ac05b5dbb6f07cf7a5350aa0c7044a9b034

--- a/groups/EOL/EOL.yaml
+++ b/groups/EOL/EOL.yaml
@@ -7,7 +7,7 @@ TEMPLATE:
 
   FILES:
     class: RubyYamlFFS
-    codeAsRoot: 1
+    codeAsRoot: true
     codeMap:
       be-tarask: be-Tarask
       ku-latn: ku-Latn
