Add unprotect messages for protect.py script
Change-Id: I9bf753a597fa206b3aeb42da7e249f782eac0102
Signed-off-by: xqt <info@gno.de>

--- a/groups/Pywikibot/Pywikibot.yaml
+++ b/groups/Pywikibot/Pywikibot.yaml
@@ -382,6 +382,13 @@ FILES:
   sourcePattern: "%GROUPROOT%/pywikibot/unlink/%CODE%.json"
 ---
 BASIC:
+  id: out-pywikipedia-unprotect
+  label: Pywikibot Unprotect
+
+FILES:
+  sourcePattern: "%GROUPROOT%/pywikibot/unprotect/%CODE%.json"
+---
+BASIC:
   id: out-pywikipedia-weblinkchecker
   label: Pywikibot Web Link Checker
 
