Add support for commonscat.py
Change-Id: I90a739f4ea93a17d0a148cfc62c12e7ffb437d5e

--- a/groups/Pywikibot/Pywikibot.yaml
+++ b/groups/Pywikibot/Pywikibot.yaml
@@ -153,6 +153,13 @@ FILES:
   sourcePattern: "%GROUPROOT%/pywikibot/commons/%CODE%.json"
 ---
 BASIC:
+  id: out-pywikipedia-commonscat
+  label: Pywikibot Commons Cat
+
+FILES:
+  sourcePattern: "%GROUPROOT%/pywikibot/commonscat/%CODE%.json"
+---
+BASIC:
   id: out-pywikipedia-commonslink
   label: Pywikibot Commons Link
 
