Make archivebot-archiveheader optional in pywikibot
Change-Id: I67fa695dce5de70f57d1214880c5a100645a39e4

--- a/groups/Pywikibot/Pywikibot.yaml
+++ b/groups/Pywikibot/Pywikibot.yaml
@@ -88,6 +88,10 @@ BASIC:
 
 FILES:
   sourcePattern: "%GROUPROOT%/pywikibot/archivebot/%CODE%.json"
+
+TAGS:
+  optional:
+    - archivebot-archiveheader
 ---
 BASIC:
   id: out-pywikipedia-basic
