--- a/groups/Blockly/Blockly.yaml
+++ b/groups/Blockly/Blockly.yaml
@@ -39,6 +39,7 @@ TAGS:
     - CONTROLS_IF_HELPURL
     - CONTROLS_WHILEUNTIL_HELPURL
     - LISTS_CREATE_EMPTY_HELPURL
+    - LISTS_CREATE_WITH_HELPURL
     - LISTS_GET_INDEX_FROM_START
     - LISTS_GET_INDEX_TAIL
     - LISTS_GET_SUBLIST_HELPURL
@@ -48,6 +49,7 @@ TAGS:
     - LISTS_LENGTH_HELPURL
     - LISTS_REPEAT_HELPURL
     - LISTS_SET_INDEX_HELPURL
+    - LISTS_SPLIT_HELPURL
     - LOGIC_BOOLEAN_HELPURL
     - LOGIC_NEGATE_HELPURL
     - LOGIC_NULL_HELPURL
