--- a/melange/config.ini
+++ b/melange/config.ini
@@ -2,8 +2,8 @@
 mediawikirepo=ssh://kartik@gerrit.wikimedia.org:29418/mediawiki/core.git
 extensionrepo=ssh://kartik@gerrit.wikimedia.org:29418/mediawiki/extensions/
 branches=origin/master origin/REL1_21 origin/REL1_20
-releasever=2014.12
-releasever-prev=2014.11
+releasever=2015.01
+releasever-prev=2014.12
 bundlename=MediaWiki language extension bundle
 downloadurl=https://translatewiki.net/mleb
 hasher=sha256sum
@@ -18,7 +18,7 @@ Babel=origin/master
 cldr=origin/master
 CleanChanges=origin/master
 LocalisationUpdate=origin/master
-Translate=7c09bef
+Translate=origin/master
 UniversalLanguageSelector=origin/master
 
 [install]
