[X Analytics] Was deployed yesterday on WMF cluster
https://git.wikimedia.org/commitdiff/operations%2Fmediawiki-config/438b660e7d277fb8cf8e7651eb1a20f6d393250c

Change-Id: I1f304781f084612f7b575a816a3c8b8299383d1b

--- a/groups/MediaWiki/WikimediaAgg.yaml
+++ b/groups/MediaWiki/WikimediaAgg.yaml
@@ -111,5 +111,6 @@ GROUPS:
   - ext-wikimediaincubator # r89556
   - ext-wikimediaincubatorinfopage
   - ext-wikimediashoplink # 2012-06-27, change-Id 1a0c3707bd6603b27d80c997968b24231eea2b04
+  - ext-xanalytics # 2015-02-02 on all wikis
   - ext-zerobanner # 2014-06
   - ext-zeroportal # 2014-06
