--- a/groups/MediaWiki/WikimediaMainAgg.yaml
+++ b/groups/MediaWiki/WikimediaMainAgg.yaml
@@ -26,6 +26,7 @@ GROUPS:
   - ext-gadgets
   - ext-globalblocking
   - ext-globalusage # 2009-11-11: commons.wikimedia.org
+  - ext-globaluserpage # 2015-02-05: Testwikis
   - ext-imagemap
   - ext-inputbox
   - ext-intersection
