[Core] Add new message key to ignore
https://gerrit.wikimedia.org/r/#/c/186332/26/languages/i18n/en.json,unified

Change-Id: Id04e8630a23431c1ec0469afb4fa813625d05831

--- a/groups/MediaWiki/MediaWiki.yaml
+++ b/groups/MediaWiki/MediaWiki.yaml
@@ -484,6 +484,7 @@ TAGS:
     - search-interwiki-custom
     - search-summary
     - searchmenu-new-nocreate
+    - section-symbol
     - shareddescriptionfollows
     - shortpages-summary
     - sidebar
