Add mapping eu->basque
Change-Id: I7dbae47635c67a2492c80559ac5fe2f843271f94

--- a/groups/MantisBT/MantisBT.yaml
+++ b/groups/MantisBT/MantisBT.yaml
@@ -23,6 +23,7 @@ TEMPLATE:
       en:      english
       es:      spanish
       et:      estonian
+      eu:      basque
       fi:      finnish
       fr:      french
       gl:      galician
