[Citoid] Deployed on WMF cluster, currently test wikis
Seems important enough to add it to the Wikimedia main extensions list
https://git.wikimedia.org/commitdiff/operations%2Fmediawiki-config/74bc9eddc3c806c64466302447964d23efec671e

Change-Id: I971170ef27164916dccd830b7b9ffb098d16a727

--- a/groups/MediaWiki/WikimediaMainAgg.yaml
+++ b/groups/MediaWiki/WikimediaMainAgg.yaml
@@ -17,6 +17,7 @@ GROUPS:
   - ext-cirrussearch # Change id 500b9c9d66fa7f410394d5665ea3abc3a184bf50
   - ext-cite
   - ext-citespecial
+  - ext-citoid # 2015-03-16
   - ext-collection
   - ext-confirmedit
   - ext-confirmeditfancycaptcha
