[Core] Messages to be ignored now
https://gerrit.wikimedia.org/r/#/c/151701/14/languages/i18n/qqq.json,unified

Change-Id: I14bc7c6a04ac4918f950e3954f3079e3455b03ea

--- a/groups/MediaWiki/MediaWiki.yaml
+++ b/groups/MediaWiki/MediaWiki.yaml
@@ -405,6 +405,8 @@ TAGS:
     - helplogin-url
     - helppage
     - history_copyright
+    - import-logentry-interwiki
+    - import-logentry-upload
     - import-summary
     - interlanguage-link-title-langonly
     - interlanguage-link-title-nonlangonly
