[Core] Add new key to ignore
https://gerrit.wikimedia.org/r/#/c/196466/3/languages/i18n/en.json,unified

Change-Id: Iffc8c587bb6f9a6cf90124d2c967e7917a4550c1

--- a/groups/MediaWiki/MediaWiki.yaml
+++ b/groups/MediaWiki/MediaWiki.yaml
@@ -390,6 +390,7 @@ TAGS:
     - disambiguations-summary
     - doubleredirects-summary
     - edithelppage
+    - editnotice-notext
     - editpage-head-copy-warn
     - editpage-tos-summary
     - editwatchlist-summary
