Add Gather to Extensions used by Wikimedia
This extension is being deployed to the English Wikipedia.
https://lists.wikimedia.org/pipermail/mobile-l/2015-March/008851.html

Change-Id: Id85575cafe9d2622832ea193fbeca6a8ca0b109d

--- a/groups/MediaWiki/WikimediaAgg.yaml
+++ b/groups/MediaWiki/WikimediaAgg.yaml
@@ -46,6 +46,7 @@ GROUPS:
   - ext-flow # 2013-12-11: testwiki, test2wiki and mediawikiwiki
   - ext-fundraiserlandingpage # r101409 for donatewiki
   - ext-fundraisingtranslateworkflow # 2014-07-14 for Meta
+  - ext-gather
   - ext-geocrumbs # Change id bc3616c74aab74b74f78bbb2ce3241e5a564b4f9 for Wikivoyage
   - ext-geodata
   - ext-gettingstarted # Change-Id: d1aac2d3dc774299c3e61ef8e163b50dfd89d313 for a bunch of wikis
