Add Disambiguator to main Wikimedia messages
This extension is used on all Wikimedia projects.

Change-Id: If23052b152e6af008b197ec42352140776ce8320

--- a/groups/MediaWiki/WikimediaMainAgg.yaml
+++ b/groups/MediaWiki/WikimediaMainAgg.yaml
@@ -21,6 +21,7 @@ GROUPS:
   - ext-collection
   - ext-confirmedit
   - ext-confirmeditfancycaptcha
+  - ext-disambiguator
   - ext-dismissablesitenotice
   - ext-echo
   - ext-featuredfeeds # r110030 for all projects
