Sync local changes
Change-Id: Ib1dfc73bcc59d1aa30006611de25911b38d39548

--- a/puppet/modules/hhvm/files/php.ini
+++ b/puppet/modules/hhvm/files/php.ini
@@ -12,6 +12,7 @@ hhvm.server.type = fastcgi
 hhvm.server.gzip_compression_level = 0
 hhvm.server.graceful_shutdown_wait = 5
 hhvm.server.stat_cache = 1
+hhvm.admin_server.port = 9001
 
 hhvm.dynamic_extension_path = /usr/lib/x86_64-linux-gnu/hhvm/extensions/20140829
 hhvm.dynamic_extensions[*] = ffs.so
@@ -23,7 +24,7 @@ hhvm.perf_pid_map = false
 hhvm.jit = true
 hhvm.jit_a_size = 100000000
 hhvm.jit_a_frozen_size = 100000000
-hhvm.jit_a_cold_size = 33000000
+hhvm.jit_a_cold_size = 50000000
 
 hhvm.log.level = Notice
 hhvm.log.always_log_unhandled_exceptions = true
