[Core] 2 new message keys to ignore
https://gerrit.wikimedia.org/r/#/c/203061/9/languages/i18n/en.json,unified

Change-Id: I00791d139924316343c44e356e121b1e26e3ffe9

--- a/groups/MediaWiki/MediaWiki.yaml
+++ b/groups/MediaWiki/MediaWiki.yaml
@@ -506,6 +506,8 @@ TAGS:
     - statistics-summary
     - suppressedarticle
     - suppressedarticle
+    - tags-edit-logentry-explanation
+    - tags-edit-revision-explanation
     - tags-summary
     - talkpageheader
     - talkpagetext
