Move ContentTranslation to Main Extensions Used by Wikimedia
It's being quickly deployed to more and more languages
and becoming a major gateway to article creation,
so its UI should be translated everywhere.

Change-Id: I310af74dbc9f1444613d3c8f036233c5a4007dcd

--- a/groups/MediaWiki/WikimediaMainAgg.yaml
+++ b/groups/MediaWiki/WikimediaMainAgg.yaml
@@ -21,6 +21,7 @@ GROUPS:
   - ext-collection
   - ext-confirmedit
   - ext-confirmeditfancycaptcha
+  - ext-contenttranslation
   - ext-disambiguator
   - ext-dismissablesitenotice
   - ext-echo
