Allow translation in Kurdish Latin script
Per request at
https://translatewiki.net/wiki/Thread:User_talk:Siebrand/Wikimedia_Mobile_AppsWikipedia_Android_Mobile/Kurdish

Change-Id: I6ba94d4a6db568900f1f359cfdec167ecb15ac3d

--- a/groups/Wikimedia/WikimediaMobile-android.yaml
+++ b/groups/Wikimedia/WikimediaMobile-android.yaml
@@ -10,12 +10,13 @@ TEMPLATE:
     codeMap:
       he: iw
       id: in
-      yi: ji
+      ku-latn: ku
       pt-br: pt-rBR
+      qqq: qq
       sr-ec: sr
+      yi: ji
       zh-hans: zh
       zh-hant: zh-rTW
-      qqq: qq
 
   MANGLER:
     class: StringMatcher
@@ -109,7 +110,7 @@ TEMPLATE:
       - ko
       - kr
       - ks
-      - ku
+      - ku-latn
       - kv
       - kw
       - ky
