--- a/groups/EtherpadLite/EtherpadLite.yaml
+++ b/groups/EtherpadLite/EtherpadLite.yaml
@@ -10,3 +10,7 @@ BASIC:
 FILES:
   class: JsonFFS
   sourcePattern: "%GROUPROOT%/etherpad-lite/src/locales/%CODE%.json"
+
+TAGS:
+  optional:
+    - pad.settings.fontType.*
